# gc_study

./: CMakeLists.txt  README.md  main.cpp
include/: common.h
include/gc/: gc_factory.h  mark_clean.h  mark_compact.h  mark_copy.h
include/memory/: memory_cell.h  memory_chunk.h
src/memory/: memory_chunk.cpp  memory_pool.cpp
